name:                live-zeromq
version:             0.1.0.0
synopsis:            control live via the WebAPI zeromq control surface
license:             BSD3
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          jeremy@n-heptane.com
category:            Sound
build-type:          Simple
cabal-version:       >=1.10

executable live-zeromq
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9,
                       aeson,
                       bytestring,
                       hmidi,
                       text,
                       zeromq-haskell
  hs-source-dirs:      src
  default-language:    Haskell2010
